# Webgenix

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  web-socket.html
service/: Cargo.toml  apis.json
service/db/: Cargo.toml
service/db/src/: lib.rs
service/src/: lib.rs  main.rs  router.rs  utils.rs
