[workspace]
members = ["service", "service/db"]
exclude = ["etc", "dj"]
resolver = "2"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-forest = { version= "0.1", features = [ "ansi", "smallvec", "serde", "tokio" ] }
